--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "serve gamelink"
+    "start": "npx serve gamelink"
   },
   "repository": {
     "type": "git",
